force-app/main/default/objects/Meeting_Prep__c/Meeting_Prep__c.object-meta.xml
<CustomObject>
    <label>Meeting Prep</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Meeting Prep Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Preps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>