force-app/main/default/objects/Meeting_Prep__c/fields/Attendee_Summary__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Summary__c</fullName>
    <label>Attendee Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>