force-app/main/default/objects/Meeting_Prep__c/fields/Competitive_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Intelligence__c</fullName>
    <label>Competitive Intelligence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>