force-app/main/default/objects/Meeting_Prep__c/fields/Key_Talking_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Talking_Points__c</fullName>
    <label>Key Talking Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>