force-app/main/default/objects/Meeting_Prep__c/fields/Potential_Objections__c.field-meta.xml
<CustomField>
    <fullName>Potential_Objections__c</fullName>
    <label>Potential Objections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>