force-app/main/default/objects/Meeting_Prep__c/fields/Prep_Brief_HTML__c.field-meta.xml
<CustomField>
    <fullName>Prep_Brief_HTML__c</fullName>
    <label>Prep Brief HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>