force-app/main/default/objects/Meeting_Prep__c/fields/Questions_To_Ask__c.field-meta.xml
<CustomField>
    <fullName>Questions_To_Ask__c</fullName>
    <label>Questions To Ask</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>