force-app/main/default/objects/Meeting_Prep__c/fields/Recent_Updates__c.field-meta.xml
<CustomField>
    <fullName>Recent_Updates__c</fullName>
    <label>Recent Updates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>